<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">FitStation</string>
    <string name="pager_title_shopping_lists">Shopping Lists</string>
    <string name="pager_title_meals">Meals</string>
    <string name="remove_item_option">Remove Item</string>
    <string name="positive_button_create">Create</string>
    <string name="text_you">You</string>
    <string name="log_error_updating_data">Error updating data: </string>
    <string name="log_error_the_read_failed">The read failed: </string>
    <string name="log_error_occurred">"Error occurred: "</string>
    <string name="action_logout">Logout</string>
    <string name="action_share_list">Share List</string>
    <string name="action_sort">Sort</string>
    <string name="action_remove_list">Remove list</string>
    <string name="action_archive">Archive</string>
    <string name="hint_add_shopping_list">Create a list</string>
    <string name="created_by">Created by </string>
    <string name="person_shopping">%d person shopping</string>
    <string name="people_shopping">%d people shopping</string>
    <string name="title_activity_list_details">List Details</string>
    <string name="action_edit_list_name">Edit list name</string>
    <string name="positive_button_add_list_item">Add item</string>
    <string name="positive_button_edit_item">Edit name</string>
    <string name="negative_button_cancel">Cancel</string>
    <string name="dialog_message_are_you_sure_remove_list">Are you sure you want to remove this list?</string>
    <string name="dialog_message_are_you_sure_remove_item">Are you sure you want to remove this item?</string>
    <string name="button_stop_shopping">Stop Shopping</string>
    <string name="button_start_shopping">Start Shopping</string>
    <string name="text_you_are_shopping">You are shopping</string>
    <string name="text_you_and_other_are_shopping">You and %s are shopping</string>
    <string name="text_you_and_number_are_shopping">You and %d others are shopping</string>
    <string name="text_other_is_shopping">%s is shopping</string>
    <string name="text_other_and_other_are_shopping">%1$s and %2$s are shopping</string>
    <string name="text_other_and_number_are_shopping">%1$s and %2$d others are shopping</string>
    <string name="bought_by">Bought by</string>
    <string name="title_activity_meal_details">Meal Details</string>
    <string name="title_activity_add_items_from_meal">Add Meal</string>
    <string-array name="meal_array">
        <item>Yemek tipini seçiniz</item>
        <item>Kahvaltı</item>
        <item>Öğle yemeği</item>
        <item>Akşam yemeği</item>
        <item>Ara öğün</item>
        <item>Detox</item>
    </string-array>
    <string-array name="workout_array">
        <item>Egzersiz tipini seçiniz</item>
        <item>Göğüs</item>
        <item>Sırt</item>
        <item>Karın</item>
        <item>Ön kol</item>
        <item>Arka kol</item>
        <item>Omuz</item>
        <item>Fonksiyonel</item>
    </string-array>
    <string name="title_activity_archived_lists">Archived Lists</string>
    <string name="title_activity_archived_list_details">Archived List Details</string>
    <string name="dialog_title_copy_list">Copy List</string>
    <string name="dialog_title_archive_list">Archive list</string>
    <string name="dialog_message_are_you_sure_archive_list">Are you sure you want to archive this list?</string>
    <string name="dialog_message_do_you_want_to_copy">Do you want to copy this list?</string>
    <string name="toast_shopping_list_was_archived">Shopping List %s was archived.</string>
    <string name="button_footer_archived_lists">Archived Lists</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">SIGN IN</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_name">Enter your name</string>
    <string name="hint_enter_username">Enter your username</string>
    <string name="hint_enter_surname">Enter your surname</string>
    <string name="hint_enter_birthday">Enter birthday</string>
    <string name="hint_enter_phonenumber">Enter your phone number</string>
    <string name="hint_enter_passwordconfirm">Confirm password</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="image_view_logo_image">Logo Image</string>
    <string name="progress_dialog_loading">Yükleniyor…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with Firebase…</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>
    <string name="progress_dialog_check_inbox">Please check your inbox for your password</string>
    <string name="dialog_title_error">Error</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
    <string name="log_error_invalid_provider">"Invalid provider: "</string>
    <string name="log_error_failed_to_change_password">"Failed to change the password: "</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="error_you_didnt_give_permissions">You must give ShoppingList++ permission to access your Google account information if you want to use Google sign-in.</string>
    <string name="error_email_taken">The email is already taken.</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>
    <string name="google_error_recoverable_oauth_error">"Recoverable Google OAuth error: "</string>
    <string name="google_error_google_play_services_not_available">Google Play Services are not available.</string>
    <string name="google_error_trying_to_connect_google_api">Trying to connect to Google API</string>
    <string name="google_error_auth_with_google">"Error authenticating with Google: "</string>
    <string name="google_error_network_error">"Network error: "</string>
    <string name="google_error_cant_connect_to_api">Are you sure that you set up a project for your app?
        Check out : https://console.developers.google.com/project. Also make sure you have all the proper
    gradle dependencies</string>
    <string name="oauth2_format">oauth2:%s</string>
    <string name="log_message_password_changed_successfully">Password changed successfully from temporary password to </string>
    <string name="log_message_auth_successful">auth successful.</string>
    <string name="title_activity_share_list">Share List</string>
    <string name="title_activity_add_friend">Add Friend</string>
    <string name="hint_enter_friends_email">Enter your trainer\'s email</string>
    <string name="text_add_friend">Add New Friend</string>
    <string name="toast_is_already_your_friend">%s is already your friend!</string>
    <string name="toast_you_cant_add_yourself">You can\'t add yourself as a friend.</string>
    <string name="action_settings">Settings</string>
    <string name="pref_title_sort_lists">Lists ordering</string>
    <string name="pref_name_sort_order_lists">pref_sort_order_lists</string>
    <string name="pref_sort_list_label_sortType">Order by</string>
    <string name="pref_sort_list_label_publish_time_entry">Publish Time</string>
    <string name="pref_sort_list_label_list_name_entry">List Name</string>
    <string name="pref_sort_list_label_owner_entry">Owner Email</string>
    <string name="pref_sort_list_label_most_recently_changed_entry">Most Recently Changed</string>
    <string name="sort_by_publish_time_value">orderByPushKey</string>
    <string name="sort_by_list_name_value">listName</string>
    <string name="sort_by_owner_value">owner</string>
    <string name="sort_by_most_recently_changed_value">timestampLastChangedReverse/timestamp</string>
    <string name="radio_button_male">Male</string>
    <string name="radio_button_female">Female</string>
    <string name="tv_measurement_title">Baslik:</string>
    <string name="tv_measurement_totalweight">Toplam agirlik :</string>
    <string name="tv_measuremet_totalmuscle">Toplam kas kutlesi :</string>
    <string name="tv_measurement_totalmuscleratio">Toplam kas orani :</string>
    <string name="tv_measuremet_totalfat">Toplam yag kutlesi :</string>
    <string name="tv_measurement_totalfatratio">Toplam yag orani :</string>
    <string name="tv_measurement_adomenfat">Karin bolgesi yag kutlesi :</string>
    <string name="tv_measurement_adomenmuscle">Karin bolgesi kas kutlesi :</string>
    <string name="tv_measurement_rightarmfat">Sag kol yag kutlesi :</string>
    <string name="tv_measurement_rightarmmuscle">Sag kol kas kutlesi :</string>
    <string name="tv_measurement_leftarmfat">Sol kol yag kutlesi :</string>
    <string name="tv_measurement_leftarmmuscle">Sol kol kas kutlesi :</string>
    <string name="tv_measurement_rightleftfat">Sag bacak yag kutlesi :</string>
    <string name="tv_measurement_rightlegmescle">Sag bacak kas kutlesi:</string>
    <string name="tv_measurement_leftlegfat">Sol bacak yag kutlesi :</string>
    <string name="tv_measurement_leftlegmuscle">Sol bacak kas kutlesi :</string>
    <string name="nav_item_add_trainer">Antrenöre kaydol</string>
    <string name="nav_item_manage_profile">Profil</string>
    <string name="nav_sub_item_settings">Ayarlar</string>
    <string name="nav_sub_item_logout">Çıkış yap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="kilo">Kilo</string>
    <string name="food">Yemek</string>
    <string name="water">Su</string>
    <string name="nav_item_measurements">Ölçüm sonuçları</string>
    <string name="nav_item_meal_list">Yemek listeleri</string>
    <string name="nav_item_exercises">Egzersizler</string>
    <string name="trainer">Antrenör</string>
    <string name="title_activity_client_measurement">Ölçüm sonuçları</string>
    <string name="title_activity_client_workout">Egzersizler</string>
    <string name="title_activity_client_meal">Yemek listeleri</string>
    <string name="right_hand">Sağ kol</string>
    <string name="abdomen">Karın</string>
    <string name="right_leg">Sağ bacak</string>
    <string name="left_hand">Sol kol</string>
    <string name="left_leg">Sol bacak</string>
    <string name="height">Boy</string>
    <string name="age">Yaş</string>
    <string name="total_weight">Toplam kilo</string>
    <string name="body_mass_index">BMI</string>
    <string name="total_fat_ratio">Yağ yüzdesi</string>
    <string name="total_fat">Toplam yağ</string>
    <string name="fat_free_mass">Toplam kas</string>
    <string name="total_body_water">Toplam su</string>
    <string name="fat">Yağ</string>
    <string name="muscle">Kas</string>
    <string name="text_add_client">Üye</string>
    <string name="text_meal_list_title">Liste adı</string>
    <string name="text_add_meal_list">Yemek listesi ekle</string>
    <string name="tv_measurement_age">Yaş</string>
    <string name="tv_measurement_height">Boy</string>
    <string name="tv_measurement_bodyMassIndex">Vucüt Kütle Endeksi(BMI)</string>
    <string name="tv_measurement_totalBodyWater">Su Kütlesi</string>
    <string name="tv_measurement_fatfreemass">Kas Kütlesi(FFM)</string>
</resources>