<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ui.trainerMeasurements.TrainerMeasurementActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/Toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleTextView"
            style="@style/HeaderText"
            android:gravity="start|center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_meal_list_title" />

        <EditText
            android:id="@+id/titleEditText"
            android:background="@android:color/transparent"
            android:gravity="start|center"
            android:paddingLeft="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/list_item_text_size"
            android:layout_height="match_parent" />

    </LinearLayout>

    <include layout="@layout/item_divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_client"
            style="@style/HeaderText"
            android:gravity="start|center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_add_client" />

        <TextView
            android:id="@+id/tv_add_client"
            android:gravity="start|center"
            android:paddingLeft="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/list_item_text_size"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/button_toggle_share"
            android:layout_width="@dimen/margin_normal"
            android:layout_height="@dimen/margin_normal"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:onClick="onAddClientPressed"
            android:src="@drawable/icon_add_friend" />

    </LinearLayout>

    <include layout="@layout/item_divider"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/ageTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_age" />

                <EditText
                    android:id="@+id/ageEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/heightTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_height" />

                <EditText
                    android:id="@+id/heightEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/bodyMassIndexTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_bodyMassIndex" />

                <EditText
                    android:id="@+id/bodyMassIndexEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/totalBodyWaterTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_totalBodyWater" />

                <EditText
                    android:id="@+id/totalBodyWaterEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/fatFreeMassTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_fatfreemass" />

                <EditText
                    android:id="@+id/fatFreeMassEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/totalweightTextView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_totalweight" />

                <EditText
                    android:id="@+id/totalweightEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number"
                    android:textColor="@color/black" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/totalfatTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measuremet_totalfat" />

                <EditText
                    android:id="@+id/totalfatEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/totalfatratioTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_totalfatratio" />

                <EditText
                    android:id="@+id/totalfatratioEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/abdomenfatTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_adomenfat" />

                <EditText
                    android:id="@+id/abdomenfatEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/abdomenmuscleTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_adomenmuscle" />

                <EditText
                    android:id="@+id/abdomenmuscleEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/rightarmfatTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_rightarmfat" />

                <EditText
                    android:id="@+id/rightarmfatEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/rightarmmuscleTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_rightarmmuscle" />

                <EditText
                    android:id="@+id/rightarmmuscleEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/leftarmfatTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_leftarmfat" />

                <EditText
                    android:id="@+id/leftarmfatEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/leftarmmuscleTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_leftarmmuscle" />

                <EditText
                    android:id="@+id/leftarmmuscleEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/rightlegfatTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_rightleftfat" />

                <EditText
                    android:id="@+id/rightlegfatEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/rightlegmuscleTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_rightlegmescle" />

                <EditText
                    android:id="@+id/rightlegmuscleEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/leftlegfatTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_leftlegfat" />

                <EditText
                    android:id="@+id/leftlegfatEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="11">

                <TextView
                    android:id="@+id/leftlegmuscleTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/tv_measurement_leftlegmuscle" />

                <EditText
                    android:id="@+id/leftlegmuscleEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="numberDecimal|number" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>



